<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="7dp">

    <Button
        android:id="@+id/create_account"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:background="@drawable/button_features"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/your_destination_for_fitness"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/nutr"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="24dp"
        android:layout_height="37dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/x"
        android:textColor="#F06048"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="252dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_regular"
        android:minHeight="48dp"
        android:text="@string/already_have_an_account"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account"
        app:layout_constraintVertical_bias="0.482"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="465dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@drawable/intro" />
</androidx.constraintlayout.widget.ConstraintLayout>