<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".sign_up"
    tools:layout_editor_absoluteX="-43dp"
    tools:layout_editor_absoluteY="-31dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218">

        <Button
            android:id="@+id/create_1"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_features"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintVertical_bias="0.149" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="33sp"
            app:layout_constraintBottom_toTopOf="@+id/name_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:layout_constraintVertical_bias="0.795" />

        <EditText
            android:id="@+id/cnf_password"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_1"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/email_1"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/password_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_1"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/name_1"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/email_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password_1"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_1"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/b_m_i"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/b_m_i"
            android:inputType="numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnf_password"
            tools:ignore="TextContrastCheck" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:minHeight="48dp"
            android:text="@string/by_signing_up_you_accept_terms_of_service_and_privacy_policy"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/create_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_m_i" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/back_arrow"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/bmi_calc"
            android:onClick="bmi_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light_italic"
            android:text="@string/BMI"
            android:textColor="@color/warnRed"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>