<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".sign_in">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="33sp"
            app:layout_constraintBottom_toTopOf="@+id/email_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_1"
            app:layout_constraintVertical_bias="0.492" />

        <Button
            android:id="@+id/create_2"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_features"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_2"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/email_2"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/password_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/password_2"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bar"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/create_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_2"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton_1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:contentDescription="@string/back_arrow"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.386"
            android:onClick="back_2"
            app:srcCompat="@drawable/ic_back_arrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
